FIX: no-scrollbar to <body> & !important in css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,11 +53,11 @@ h3, h4, h5, h6, p, span, div, input, a, button {
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
-	display: none;
+	display: none !important;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .no-scrollbar {
-	-ms-overflow-style: none;  /* IE and Edge */
-	scrollbar-width: none;  /* Firefox */
+	-ms-overflow-style: none !important;  /* IE and Edge */
+	scrollbar-width: none !important;  /* Firefox */
 }
